--- a/truespeak/templates/base.html
+++ b/truespeak/templates/base.html
@@ -43,7 +43,7 @@
         <![endif]-->
     </head>
 
-    <body>
+    <body data-spy="scroll" data-target=".about-nav">
 
         <!-- Static navbar -->
         <div class="navbar navbar-default navbar-static-top" role="navigation">
