--- a/truespeak/static/css/home.css
+++ b/truespeak/static/css/home.css
@@ -1,3 +1,7 @@
+.home-wrapper {
+    background:none;
+}
+
 .masthead {
     text-align: center;
 }
@@ -15,6 +19,7 @@
     float:right;
     width:80px;
 }
+
 .left-side {
     float:left;
     width:85%;
@@ -34,18 +39,11 @@
 }
 
 .chrome-btn {
-    float: left;
     margin-top: 20px;
     margin-bottom: 5px;
     width: 100%;
 }
 
-.chrome-icon {
-    width: 73px;
-    float: right;
-    margin-top: 13px;
-    display:none;
-}
 .ps-explanation p {
     font-size: 22px;
     line-height: 31px;
