--- a/truespeak/templates/home.html
+++ b/truespeak/templates/home.html
@@ -8,31 +8,24 @@
 {% block body %}
 
     <div class="container-narrow">
-            {% include "share_snippet.html" %}
-        <div class="masthead muted">
-            <h3 style="text-align:left;margin-left:110px;">
-                Secure your email from eavesdroppers.
-            </h3>
-        </div>
-
-        <hr>
-
-        <div class="jumbotron" style="padding-top:15px;">
+        <div class="jumbotron home-wrapper">
             <div class="left-side">
-            <h1 class="pull-left">
-                ParselTongue
-            </h1>
-                  <p class="lead def-text" style="text-align:left;">
-                The client-side encryption extension for Gmail.
-            </p>
+                <h1 class="pull-left">
+                    ParselTongue
+                </h1>
+                      <p class="lead def-text" style="text-align:left;">
+                    The client-side encryption extension for Gmail.
+                </p>
             </div>
             <div class="image-wrapper">
                 <img src="http://icons.iconarchive.com/icons/martin-berube/animal/256/snake-icon.png" class="snake-icon">
             </div>
 
-            <a class="btn btn-primary chrome-btn" href="https://chrome.google.com/webstore/detail/parseltongue/egpagjaeoilneaefepllapmajaoefcgd?hl=en&gl=US" target="_blank">Get it for Chrome </a> <img src="http://netflix.burtonthird.com/static/img/chrome-logo.png" class="chrome-icon"/>
-
-            <img class="snake-img" src="http://fc06.deviantart.net/fs70/i/2012/329/3/f/black_and_white_snake_by_evilpurplechicken-d5m6g7f.jpg"/>
+            <a class="btn btn-primary chrome-btn" href="https://chrome.google.com/webstore/detail/parseltongue/egpagjaeoilneaefepllapmajaoefcgd?hl=en&gl=US" target="_blank">Get it for Chrome </a>
+            <h3>
+                Secure your email from eavesdroppers.
+            </h3>
+            {% include "share_snippet.html" %}
 
         </div>
 
