--- a/truespeak/templates/home.html
+++ b/truespeak/templates/home.html
@@ -31,7 +31,7 @@
 
         <hr>
 
-        <div class="row-fluid marketing">
+        <div class="marketing">
 
             <div class="ps-explanation">
                 <h3>Secure</h3>
@@ -55,13 +55,9 @@
 
         <h3> What does it look like? </h3>
 
-        <div class="tutorial-wrapper" style="padding-left:0px;padding-bottom:0px;">
+        <div class="tutorial-wrapper">
 
             {% include 'tutorial_snippet.html' %}
-
-            <p>
-                It's simple, and it's free. <a href="https://chrome.google.com/webstore/detail/parseltongue/egpagjaeoilneaefepllapmajaoefcgd?hl=en&gl=US" target="_blank">Get it for chrome</a>.
-            </p>
 
         </div>
 
