--- a/truespeak/templates/home.html
+++ b/truespeak/templates/home.html
@@ -30,40 +30,31 @@
         </div>
 
         <hr>
-
-        <div class="marketing">
-
-            <div class="ps-explanation">
-                <h3>Secure</h3>
-                <p>
-                    Speak freely knowing that only the intended recipients of your messages can read them. The government, targeted advertisers, Google, Facebook and hackers will all be unable to read your messages even if they are eavesdropping on them. With ParselTongue installed, all of your communications can only be decrypted with the private key only your message recipient has.
-                </p>
-                <h3>Seamless</h3>
-                <p>
-                    Once you've installed the ParselTongue chrome extension, that's it. ParselTonge will keep your communications secure and you'll forget it's even there.
-                </p>
-                <h3>Snakes</h3>
-                <p>
-                    Snakes are elongated, legless, carnivorous reptiles of the suborder Serpentes that can be distinguished from legless lizards by their lack of eyelids and external ears.
-                </p>
-            </div>
-
-
-        </div>
-
-        <hr>
-
-        <h3> What does it look like? </h3>
-
-        <div class="tutorial-wrapper">
-
-            {% include 'tutorial_snippet.html' %}
-
-        </div>
-
     </div>
 
-    <!-- <img class="crazy-snake" src="http://31.media.tumblr.com/eca927ed58e655bd139fa9f269724a03/tumblr_mf09rsPUOg1r1mkubo1_500.gif"/> -->
+    <div class="container">
+      <!-- Example row of columns -->
+      <div class="row">
+        <div class="col-md-4">
+            <h2>Secure</h2>
+            <p>
+                Speak freely knowing that only the intended recipients of your messages can read them. The government, targeted advertisers, Google, and hackers will be unable to read your messages, even if they are eavesdropping on them. With ParselTongue installed, all of your communications can be decrypted with the private key which only your message recipient has.
+            </p>
+        </div>
+        <div class="col-md-4">
+            <h2>Seamless</h2>
+            <p>
+                Once you've installed the ParselTongue chrome extension, that's it. ParselTonge will keep your communications secure and you'll forget it's even there.
+            </p>
+        </div>
+        <div class="col-md-4">
+            <h2>Snakes</h2>
+            <p>
+                Snakes are elongated, legless, carnivorous reptiles of the suborder Serpentes that can be distinguished from legless lizards by their lack of eyelids and external ears.
+            </p>
+        </div>
+      </div>
+    </div>
 {% endblock %}
 
 {% block scripts %}
