--- a/truespeak/templates/home.html
+++ b/truespeak/templates/home.html
@@ -28,8 +28,6 @@
             {% include "share_snippet.html" %}
 
         </div>
-
-        <hr>
     </div>
 
     <div class="container">
@@ -38,7 +36,7 @@
         <div class="col-md-4">
             <h2>Secure</h2>
             <p>
-                Speak freely knowing that only the intended recipients of your messages can read them. The government, targeted advertisers, Google, and hackers will be unable to read your messages, even if they are eavesdropping on them. With ParselTongue installed, all of your communications can be decrypted with the private key which only your message recipient has.
+                Speak freely knowing that only the intended recipients of your messages can read them. With ParselTongue installed, your communications can be decrypted with the private key which only your message recipient has.
             </p>
         </div>
         <div class="col-md-4">
