--- a/truespeak/templates/register.html
+++ b/truespeak/templates/register.html
@@ -42,7 +42,7 @@
                     Choose a password you will remember! <br>This is used to encyrpt your private key and is <strong> non-recoverable. </strong>
                 </h3>
                 <p>
-                    To learn about how ParselTongue works and why the password is not recoverable, read our <a href="/about/">FAQ</a>.
+                    To learn about how ParselTongue works and why the password is not recoverable, read our <a href="/faq/">FAQ</a>.
                 </p>
             </div>
 
