--- a/truespeak/templates/tutorial_snippet.html
+++ b/truespeak/templates/tutorial_snippet.html
@@ -1,6 +1,6 @@
 {% load filters %} 
 
-{% include_style "css/tutorial-snippet" %}
+{% include_style "css/tutorial_snippet" %}
 
 <div id="carousel-example-generic" class="carousel slide">
     <!-- Indicators -->
@@ -17,7 +17,7 @@
             <img src="/static/img/tutorial/ext-icon.jpg">
             <div class="carousel-caption">
                 <p> 
-                    Click the snake to log in and out of ParselTongue, modify settings, or to the about page.
+                    Click the snake to log in and out of ParselTongue, modify settings, or to the faq page.
                 </p>
             </div>
         </div>
