--- a/truespeak/static/css/tutorial.css
+++ b/truespeak/static/css/tutorial.css
@@ -1,20 +1,12 @@
-.tutorial-wrapper p {
-    font-size:20px;
+.tutorial-header {
     margin-top:30px;
+    text-align: center;
 }
 
-.tutorial-wrapper h3 {
-    margin-top:50px;
-    font-size:36px;
+.tutorial-header p {
+    font-size:16pt;
 }
 
-.tutorial-wrapper {
-    max-width:1100px;
-    padding-left: 10%;
-    padding-right: 12%;
-    padding-bottom: 70px;
-}
-
-.tutorial-wrapper h3.super-duper-header {
-    font-size:54px;
+.tutorial-header h2 {
+    font-size:48px;
 }
