--- a/truespeak/templates/base.html
+++ b/truespeak/templates/base.html
@@ -43,7 +43,7 @@
         <![endif]-->
     </head>
 
-    <body data-spy="scroll" data-target=".about-nav">
+    <body data-spy="scroll" data-target=".faq-nav">
 
         <!-- Static navbar -->
         <div class="navbar navbar-default navbar-static-top" role="navigation">
@@ -59,8 +59,8 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="{{ nav_about }}"><a href="/about/">About</a></li>
                         <li  class="{{ nav_team }}"><a href="/team/">Team</a></li>
+                        <li class="{{ nav_faq }}"><a href="/faq/">FAQ</a></li>
                         {% if not user.is_authenticated %}
                             <li class="{{ nav_register }} pt-ext-installed" style="display:none;"><a href="/register/">Register</a></li>
                         {% else %}
