getparseltongue@gmail.com

--- a/truespeak/templates/base.html
+++ b/truespeak/templates/base.html
@@ -91,9 +91,9 @@
                 <a class="pull-right twitter-link" href="http://www.twitter.com/getparseltongue" target="_blank"> <img src="https://si0.twimg.com/favicons/favicon.ico">
                     @getparseltongue 
                 </a>
-                <a class="pull-right twitter-link" href="mailto:parseltongueextension@gmail.com">
+                <a class="pull-right twitter-link" href="mailto:getparseltongue@gmail.com">
                     <i class="glyphicon glyphicon-envelope"></i>
-                    parseltongueextension@gmail.com 
+                    getparseltongue@gmail.com
                 </a>
                 <div style="clear:both;"></div>
             </div>
