stuff still shitty looking on /home, will fix html/css later

--- a/truespeak/templates/home.html
+++ b/truespeak/templates/home.html
@@ -9,22 +9,23 @@
 
     <div class="container-narrow">
         <div class="jumbotron home-wrapper">
-            <div class="left-side">
-                <h1 class="pull-left">
-                    ParselTongue
-                </h1>
-                      <p class="lead def-text" style="text-align:left;">
-                    The client-side encryption extension for Gmail.
-                </p>
-            </div>
-            <div class="image-wrapper">
-                <img src="http://icons.iconarchive.com/icons/martin-berube/animal/256/snake-icon.png" class="snake-icon">
-            </div>
+                <div class="row">
+                    <div class="col-md-2">
+                    <div class="image-wrapper">
+                <img src="http://icons.iconarchive.com/icons/martin-berube/animal/256/snake-icon.png" class="snake-icon" style="margin-top: 15px; ">
+                    </div>
+                    </div>
+                    <div class="col-md-10">
+                    <h2>
+                          Encryption for Gmail, in your browser.
+                    </h2>
+                    <h3>
+                        Secure your email from eavesdroppers.
+                    </h3>
+                    </div>
+                </div>
 
-            <a class="btn btn-primary chrome-btn" href="https://chrome.google.com/webstore/detail/parseltongue/egpagjaeoilneaefepllapmajaoefcgd?hl=en&gl=US" target="_blank">Get it for Chrome </a>
-            <h3>
-                Secure your email from eavesdroppers.
-            </h3>
+            <a class="btn btn-primary chrome-btn" href="https://chrome.google.com/webstore/detail/parseltongue/egpagjaeoilneaefepllapmajaoefcgd?hl=en&gl=US" target="_blank">Get Parseltongue for Chrome </a>
             {% include "share_snippet.html" %}
 
         </div>
@@ -32,7 +33,7 @@
 
     <div class="container">
       <!-- Example row of columns -->
-      <div class="row">
+      <div class="row" style="width:90%; margin:auto;">
         <div class="col-md-4">
             <h2>Secure</h2>
             <p>
