--- a/truespeak/static/css/home.css
+++ b/truespeak/static/css/home.css
@@ -2,8 +2,13 @@
     margin-bottom:0px;
 }
 
+.col-md-4 {
+    padding: 0 30px;
+}
 .home-wrapper {
     background:none;
+    padding-top: 30px; 
+    padding-bottom: 20px;
 }
 
 .masthead {
@@ -43,8 +48,9 @@
 }
 
 .chrome-btn {
-    margin-top: 20px;
-    margin-bottom: 5px;
+    /*margin-top: 20px;*/
+    margin: 30px 0;
+    /*margin-bottom: 30px;*/
     width: 100%;
 }
 
