--- a/truespeak/templates/home.html
+++ b/truespeak/templates/home.html
@@ -8,16 +8,16 @@
 {% block body %}
 
     <div class="container-narrow">
-        <div class="jumbotron home-wrapper">
+        <div class="at-least jumbotron home-wrapper">
                 <div class="row">
                     <div class="col-md-2">
                     <div class="image-wrapper">
-                <img src="http://icons.iconarchive.com/icons/martin-berube/animal/256/snake-icon.png" class="snake-icon" style="margin-top: 15px; ">
+                <img src="/static/img/snake-icon-128.png" class="snake-icon">
                     </div>
                     </div>
-                    <div class="col-md-10">
+                    <div class="home-header col-md-10">
                     <h2>
-                          Encryption for Gmail, in your browser.
+                        Encryption for Gmail, in your browser.
                     </h2>
                     <h3>
                         Secure your email from eavesdroppers.
@@ -31,29 +31,6 @@
         </div>
     </div>
 
-    <div class="container">
-      <!-- Example row of columns -->
-      <div class="row" style="width:90%; margin:auto;">
-        <div class="col-md-4">
-            <h2>Secure</h2>
-            <p>
-                Speak freely knowing that only the intended recipients of your messages can read them. With ParselTongue installed, your communications can be decrypted with the private key which only your message recipient has.
-            </p>
-        </div>
-        <div class="col-md-4">
-            <h2>Seamless</h2>
-            <p>
-                Once you've installed the ParselTongue chrome extension, that's it. ParselTonge will keep your communications secure and you'll forget it's even there.
-            </p>
-        </div>
-        <div class="col-md-4">
-            <h2>Snakes</h2>
-            <p>
-                Snakes are elongated, legless, carnivorous reptiles of the suborder Serpentes that can be distinguished from legless lizards by their lack of eyelids and external ears.
-            </p>
-        </div>
-      </div>
-    </div>
 {% endblock %}
 
 {% block scripts %}
