--- a/truespeak/templates/login.html
+++ b/truespeak/templates/login.html
@@ -29,7 +29,7 @@
                     </span>
                     <div class="loading-gif"></div>
                 </form>
-                <img class="login-snake" src="/static/img/login-snake.jpg"/>
+                <img class="login-snake" src="/static/img/login-snake.png"/>
             </div>
         </div>
     </div>
