--- a/truespeak/templates/welcome.html
+++ b/truespeak/templates/welcome.html
@@ -8,7 +8,7 @@
 {% block body %}
 
        <div class="jumbotron welcome-container">
-             <img class="sound-of-music" src="/static/img/sound-of-music.jpg"/>
+             <img class="sound-of-music" src="/static/img/sound-of-music.png"/>
             <div class="welcome-text">
                     Sending a confirmation email to:
                     {{ email_address }}
