--- a/truespeak/static/css/home.css
+++ b/truespeak/static/css/home.css
@@ -1,27 +1,23 @@
 .navbar {
-    margin-bottom:0px;
+    margin-bottom: 0px;
 }
 
-.col-md-4 {
-    padding: 0 30px;
-}
 .home-wrapper {
     background:none;
     padding-top: 30px; 
     padding-bottom: 20px;
 }
 
-.masthead {
-    text-align: center;
+.home-header {
+    padding-top:35px;
 }
 
 .snake-icon {
     width: 118px;
     float: left;
     margin-top: 25px;
-    margin-left: 41%;
     position: relative;
-    left: -87px;
+    left: -10px;
 }
 
 .image-wrapper {
@@ -34,44 +30,7 @@
     width:85%;
 }
 
-.snake-img {
-    margin-top:30px;
-    width:100%;
-}
-
-.def-text {
-    margin-top: 15px;
-    margin-bottom: 5px;
-    width: 90%;
-    float: left;
-    font-size: 24px;
-}
-
 .chrome-btn {
-    /*margin-top: 20px;*/
-    margin: 30px 0;
-    /*margin-bottom: 30px;*/
+    margin-top: 25px;
     width: 100%;
-}
-
-.ps-explanation p {
-    font-size: 22px;
-    line-height: 31px;
-    width: 95%;
-    margin-bottom: 39px;
-    text-align: left;
-}
-
-/* Supporting marketing content */
-.marketing {
-    margin: 0px 0;
-}
-
-.marketing p + h4 {
-    margin-top: 28px;
-}
-
-.crazy-snake {
-    margin-top:30px;
-    width:100%;  
 }
