--- a/truespeak/templates/base.html
+++ b/truespeak/templates/base.html
@@ -59,8 +59,9 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li  class="{{ nav_team }}"><a href="/team/">Team</a></li>
+                        <li class="{{ nav_tutorial }}"><a href="/tutorial/">Tutorial</a></li>
                         <li class="{{ nav_faq }}"><a href="/faq/">FAQ</a></li>
+                        <li  class="{{ nav_team }}"><a href="/team/">Team</a></li>
                         {% if not user.is_authenticated %}
                             <li class="{{ nav_register }} pt-ext-installed" style="display:none;"><a href="/register/">Register</a></li>
                         {% else %}
