--- a/truespeak/templates/base.html
+++ b/truespeak/templates/base.html
@@ -64,7 +64,7 @@
                         {% if not user.is_authenticated %}
                             <li class="{{ nav_register }} pt-ext-installed" style="display:none;"><a href="/register/">Register</a></li>
                         {% else %}
-                            <li class={{ nav_settings }}><a href="/settings/">Settings</a></li>
+                            <li class="{{ nav_settings }}"><a href="/settings/">Settings</a></li>
                         {% endif %}
                     </ul>
                     <ul class="nav navbar-nav navbar-right pt-ext-installed">
