new requirement, email regex checking

--- a/truespeak/templates/settings.html
+++ b/truespeak/templates/settings.html
@@ -23,7 +23,7 @@
 
                         <form role="form">
                             <div class="form-group new-email-form floated-wrapper">
-                                <input type="email" class="form-control register-input list-group-item new-email " placeholder="Add Another Email Address">
+                                <input type="email" class="form-control register-input list-group-item new-email" placeholder="Add Another Email Address">
                                 <button type="submit" class="btn btn-lg btn-primary register-button new-email-save">Save</button>
                             </div>
                         </form>
@@ -35,7 +35,7 @@
                                     {{ email }}
                                     {% if not confirmed and email != user.email %}
                                         <div class="email-btn delete-email" email="{{ email }}">
-                                            <span class="glyphicon glyphicon-remove"></span>
+                                            <span class="glyphicon glyphicon-trash"></span>
                                         </div>
                                         <div class="email-btn resend-confirmation">
                                             <span class="glyphicon glyphicon-envelope"></span>
