--- a/truespeak/templates/settings.html
+++ b/truespeak/templates/settings.html
@@ -29,7 +29,7 @@
                         </form>
                         
                         <div class="floated-wrapper"> 
-                            <ul class="list-group" style="position: relative;">
+                            <ul class="list-group">
                             {% for email, confirmed in associated_email_addresses %}
                                 <li class="list-group-item email-address">
                                     {{ email }}
