--- a/truespeak/templates/home.html
+++ b/truespeak/templates/home.html
@@ -15,7 +15,7 @@
                 <img src="/static/img/snake-icon-128.png" class="snake-icon">
                     </div>
                     </div>
-                    <div class="home-header col-md-10">
+                    <div class="col-md-10">
                     <h2>
                         Encryption for Gmail, in your browser.
                     </h2>
