fucking around with tutorial

--- a/truespeak/templates/tutorial_snippet.html
+++ b/truespeak/templates/tutorial_snippet.html
@@ -9,36 +9,36 @@
     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
     <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+    <!-- <li data-target="#carousel-example-generic" data-slide-to="4"></li> -->
   </ol>
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
         <div class="active item preview">
-            <img src="/static/img/tutorial/ext-icon.jpg">
+            <img class="carousel-image" src="/static/img/tutorial/ext-icon-new.png">
             <div class="carousel-caption">
                 <p> 
-                    Click the snake to log in and out of ParselTongue, modify settings, or to the faq page.
+                    Click the snake to log in and out, modify settings, or find the FAQ page 
                 </p>
             </div>
         </div>
-        <div class="item preview">
-            <img src="/static/img/tutorial/gmail-locked.jpg">
+<!--         <div class="item preview">
+            <img class="carousel-image" src="/static/img/tutorial/gmail-locked-new.png">
             <div class="carousel-caption">  
                 <p>
                     Your Gmail will look exactly the same as it did before, except for one new button that appears when you write emails to other ParselTongue users.
                 </p>
             </div>
-        </div>
+        </div> -->
         <div class="item preview">
-            <img src="/static/img/tutorial/gmail-unlocked.jpg">
+            <img class="carousel-image" src="/static/img/tutorial/gmail-unlocked-new.png">
             <div class="carousel-caption">
                 <p>
-                    Click the snake to encrypt your email, only you and your email's recipients will be able to read it.
+                    Click the snake to encrypt your email. Only you and your email's recipients will be able to read it.
                 </p>
             </div>
         </div>        
         <div class="item preview">
-            <img src="/static/img/tutorial/gmail-locked.jpg">
+            <img class="carousel-image" src="/static/img/tutorial/gmail-locked-new.png">
             <div class="carousel-caption">
                 <p>
                     Click the lock again, to send your email unencrypted.
@@ -46,7 +46,7 @@
             </div>
         </div>
         <div class="item preview">
-            <img src="/static/img/tutorial/ext-popup-locked.jpg">
+            <img class="carousel-image" src="/static/img/tutorial/ext-popup-locked-new.png">
             <div class="carousel-caption">
                 <p>
                     Use the popup to make encryption a default.
