--- a/truespeak/static/css/tutorial.css
+++ b/truespeak/static/css/tutorial.css
@@ -10,3 +10,22 @@
 .tutorial-header h2 {
     font-size:48px;
 }
+
+.carousel-image {
+    margin: auto;
+}
+
+.carousel-caption {
+    padding: 10px;
+    margin-top: -20px;
+    bottom: 60px;
+    background-color: black;
+    opacity: 0.7;
+    border-radius: 5px;
+}
+
+.carousel-caption p {
+    color: white;
+    margin: 0;
+    font-size: 18px;
+}
