spotlight pics instead. i think this looks better?

--- a/truespeak/templates/tutorial_snippet.html
+++ b/truespeak/templates/tutorial_snippet.html
@@ -30,7 +30,7 @@
             </div>
         </div> -->
         <div class="item preview">
-            <img class="carousel-image" src="/static/img/tutorial/gmail-unlocked-new.png">
+            <img class="carousel-image" src="/static/img/tutorial/gmail-unlocked.png">
             <div class="carousel-caption">
                 <p>
                     Click the snake to encrypt your email. Only you and your email's recipients will be able to read it.
@@ -38,7 +38,7 @@
             </div>
         </div>        
         <div class="item preview">
-            <img class="carousel-image" src="/static/img/tutorial/gmail-locked-new.png">
+            <img class="carousel-image" src="/static/img/tutorial/gmail-locked.png">
             <div class="carousel-caption">
                 <p>
                     Click the lock again, to send your email unencrypted.
@@ -56,10 +56,14 @@
     </div>
 
   <!-- Controls -->
+  <div class="carousel-control-wrapper">
   <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left"></span>
   </a>
+  </div>
+  <div class="carousel-control-wrapper">
   <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
     <span class="glyphicon glyphicon-chevron-right"></span>
   </a>
+  </div>
 </div>
