--- a/truespeak/static/css/tutorial.css
+++ b/truespeak/static/css/tutorial.css
@@ -19,8 +19,10 @@
     padding: 10px;
     margin-top: -20px;
     bottom: 60px;
-    background-color: black;
-    opacity: 0.7;
+    color: white;
+    background-color: #428bca;
+    /*background-color: black;*/
+    opacity: 0.8;
     border-radius: 5px;
 }
 
