click to go to next slide in carousel also renaming carousel id better way to include tutorial.js?

--- a/truespeak/templates/base.html
+++ b/truespeak/templates/base.html
@@ -102,6 +102,7 @@
         {% include_script "js/jquery-1.10.2.min" %}
         {% include_script "js/bootstrap.min" %}
         {% include_script "js/base" %}
+        {% include_script "js/tutorial" %}
 
         {% block scripts %}
         {% endblock %}
