--- a/truespeak/templates/tutorial_snippet.html
+++ b/truespeak/templates/tutorial_snippet.html
@@ -2,14 +2,14 @@
 
 {% include_style "css/tutorial_snippet" %}
 
-<div id="carousel-example-generic" class="carousel slide">
+<div id="tutorial-carousel" class="carousel slide">
     <!-- Indicators -->
   <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-    <!-- <li data-target="#carousel-example-generic" data-slide-to="4"></li> -->
+    <li data-target="#tutorial-carousel" data-slide-to="0" class="active"></li>
+    <li data-target="#tutorial-carousel" data-slide-to="1"></li>
+    <li data-target="#tutorial-carousel" data-slide-to="2"></li>
+    <li data-target="#tutorial-carousel" data-slide-to="3"></li>
+    <!-- <li data-target="#tutorial-carousel" data-slide-to="4"></li> -->
   </ol>
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
@@ -57,12 +57,12 @@
 
   <!-- Controls -->
   <div class="carousel-control-wrapper">
-  <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+  <a class="left carousel-control" href="#tutorial-carousel" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left"></span>
   </a>
   </div>
   <div class="carousel-control-wrapper">
-  <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+  <a class="right carousel-control" href="#tutorial-carousel" data-slide="next">
     <span class="glyphicon glyphicon-chevron-right"></span>
   </a>
   </div>
