--- a/truespeak/templates/tutorial_snippet.html
+++ b/truespeak/templates/tutorial_snippet.html
@@ -5,16 +5,16 @@
 <div id="tutorial-carousel" class="carousel slide">
     <!-- Indicators -->
   <ol class="carousel-indicators">
-    <li data-target="#tutorial-carousel" data-slide-to="0" class="active"></li>
-    <li data-target="#tutorial-carousel" data-slide-to="1"></li>
-    <li data-target="#tutorial-carousel" data-slide-to="2"></li>
-    <li data-target="#tutorial-carousel" data-slide-to="3"></li>
+    <li data-target="#tutorial-carousel" data-slide-to="0" class="carousel-indicator active"></li>
+    <li data-target="#tutorial-carousel" data-slide-to="1" class="carousel-indicator"></li>
+    <li data-target="#tutorial-carousel" data-slide-to="2" class="carousel-indicator"></li>
+    <li data-target="#tutorial-carousel" data-slide-to="3" class="carousel-indicator"></li>
     <!-- <li data-target="#tutorial-carousel" data-slide-to="4"></li> -->
   </ol>
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
         <div class="active item preview">
-            <img class="carousel-image" src="/static/img/tutorial/ext-icon-new.png">
+            <img class="carousel-image" src="/static/img/tutorial/ext-icon.png">
             <div class="carousel-caption">
                 <p> 
                     Click the snake to log in and out, modify settings, or find the FAQ page 
@@ -46,7 +46,7 @@
             </div>
         </div>
         <div class="item preview">
-            <img class="carousel-image" src="/static/img/tutorial/ext-popup-locked-new.png">
+            <img class="carousel-image" src="/static/img/tutorial/ext-popup.png">
             <div class="carousel-caption">
                 <p>
                     Use the popup to make encryption a default.
