--- a/truespeak/templates/home.html
+++ b/truespeak/templates/home.html
@@ -7,7 +7,7 @@
 
 {% block body %}
 
-    <div class="container-narrow">
+    <div class="container-narrow home-container-narrow">
         <div class="at-least jumbotron home-wrapper">
                 <div class="row">
                     <div class="col-md-2">
@@ -16,11 +16,11 @@
                     </div>
                     </div>
                     <div class="col-md-10">
-                    <h2>
-                        Encryption for Gmail, in your browser.
+                    <h2 class="home-bold-text">
+                       Encryption for Gmail, in your Browser.
                     </h2>
-                    <h3>
-                        Secure your email from eavesdroppers.
+                    <h3 class="home-bold-text">
+                       Secure your email from eavesdroppers.
                     </h3>
                     </div>
                 </div>
