--- a/truespeak/templates/tutorial.html
+++ b/truespeak/templates/tutorial.html
@@ -10,11 +10,11 @@
     <div class="at-least container-narrow tutorial-wrapper">
 
         <div class="tutorial-header">
-            <h2> 
+            <h2 class="tutorial-header-text">
                 ParselTongue is ready to go!
             </h2>
 
-            <p> 
+            <p class="tutorial-intro-text">
                 Feel free to <a href="https://mail.google.com">go straight to gmail</a> and try it out, but we recommend checking out the tutorial below (it's short).
             </p>
 
