--- a/truespeak/static/css/base.css
+++ b/truespeak/static/css/base.css
@@ -59,6 +59,7 @@ a.sign-in-button {
     margin-left: 10%;
     padding-bottom:15px;
     padding-top:15px;
+    margin-top:40px;
 }
 
 .footer-bar {
