adding tutorial snippet to home page

--- a/truespeak/templates/home.html
+++ b/truespeak/templates/home.html
@@ -28,6 +28,8 @@
             <a class="btn btn-primary chrome-btn" href="https://chrome.google.com/webstore/detail/parseltongue/egpagjaeoilneaefepllapmajaoefcgd?hl=en&gl=US" target="_blank">Get Parseltongue for Chrome </a>
             {% include "share_snippet.html" %}
 
+            {% include "tutorial_snippet.html" %}
+
         </div>
     </div>
 
