--- a/truespeak/templates/tutorial_snippet.html
+++ b/truespeak/templates/tutorial_snippet.html
@@ -17,7 +17,7 @@
             <img class="carousel-image" src="/static/img/tutorial/ext-icon.png">
             <div class="carousel-caption">
                 <p> 
-                    Click the snake to log in and out, modify settings, or find the FAQ page 
+                    Click the snake to log in and out or modify your settings.
                 </p>
             </div>
         </div>
@@ -33,7 +33,7 @@
             <img class="carousel-image" src="/static/img/tutorial/gmail-unlocked.png">
             <div class="carousel-caption">
                 <p>
-                    Click the snake to encrypt your email. Only you and your email's recipients will be able to read it.
+                    Click the snake to encrypt your email.
                 </p>
             </div>
         </div>        
