tutorial on home page

--- a/truespeak/templates/home.html
+++ b/truespeak/templates/home.html
@@ -28,6 +28,14 @@
             <a class="btn btn-primary chrome-btn" href="https://chrome.google.com/webstore/detail/parseltongue/egpagjaeoilneaefepllapmajaoefcgd?hl=en&gl=US" target="_blank">Get Parseltongue for Chrome </a>
             {% include "share_snippet.html" %}
 
+{#            <div class="home-tutorial-header">#}
+{#                <h2> Check out the tutorial below or read our <a href="/faq"/>FAQ</a> for more information.</h2>#}
+{#            </div>#}
+
+            <div class="home-tutorial-header">
+               Click through the tutorial below or read our <a href="/faq/">FAQ</a> to learn more.
+            </div>
+
             {% include "tutorial_snippet.html" %}
 
         </div>
